Update for items for title and slot actions